add queueWordsFromString method to queue.c

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "inputhandler.h": "c",
-        "tools.h": "c"
+        "tools.h": "c",
+        "queue.h": "c"
     }
 }
