--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "inputhandler.h": "c",
         "tools.h": "c",
-        "queue.h": "c"
+        "queue.h": "c",
+        "symbollist.h": "c"
     }
 }
