change in isLabel method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "queue.h": "c",
         "symbollist.h": "c",
         "enginecompile.h": "c",
-        "asmboperation.h": "c"
+        "asmboperation.h": "c",
+        "labellist.h": "c",
+        "enginedb.h": "c"
     }
 }
