before magore change in newline binary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,11 @@
     "__nullptr": "cpp",
     "response.h": "c",
     "stringseperator.h": "c",
-    "datasegment.h": "c"
+    "datasegment.h": "c",
+    "objectcreator.h": "c",
+    "__locale": "c",
+    "__string": "c",
+    "string": "c",
+    "string_view": "c"
   }
 }
