--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "__locale": "c",
     "__string": "c",
     "string": "c",
-    "string_view": "c"
+    "string_view": "c",
+    "errors.h": "c"
   }
 }
